--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clark</title>
-    <meta name="desciption" content="Clark Portfolio." />
+    <meta name="description" content="Clark Portfolio." />
   </head>
   <body>
     <div id="root"></div>
